--- a/package.json
+++ b/package.json
@@ -12,9 +12,16 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
+    "@hookform/resolvers": "^3.9.1",
     "@mui/icons-material": "^5.15.12",
+    "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-popover": "^1.1.2",
+    "@radix-ui/react-progress": "^1.1.0",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tooltip": "^1.1.4",
     "@tanstack/react-query": "^5.25.0",
     "@types/lodash": "^4.14.202",
     "@types/node": "^20.12.2",
@@ -22,19 +29,25 @@
     "@vitejs/plugin-react-swc": "^3.6.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "eslint-plugin-import": "^2.29.1",
+    "lucide-react": "^0.468.0",
     "react": "^18.2.0",
+    "react-day-picker": "8.10.1",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.13",
-    "react-hook-form": "^7.53.0",
+    "react-hook-form": "^7.53.2",
     "react-lottie": "^1.2.4",
     "react-router-dom": "^6.22.2",
     "react-toastify": "^10.0.4",
+    "recharts": "^2.14.1",
     "tailwind-merge": "^2.5.4",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
+    "@types/bun": "latest",
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
     "@types/react-router-dom": "^5.3.3",
@@ -55,8 +68,7 @@
     "typescript": "^5.2.2",
     "vite": "^5.1.4",
     "vite-plugin-babel-macros": "^1.0.6",
-    "vite-tsconfig-paths": "^4.3.1",
-    "@types/bun": "latest"
+    "vite-tsconfig-paths": "^4.3.1"
   },
   "resolutions": {
     "rollup": "npm:@rollup/wasm-node"
